# vnpy_ifind

./: CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: pythonapp.yml
vnpy_ifind/: __init__.py  ifind_datafeed.py
