[metadata]
name = vnpy_ifind
version = 1.0.1
url = https://www.vnpy.com
license = MIT
author = Xiaoyou Chen
author_email = xiaoyou.chen@mail.vnpy.com
description = iFinD datafeed for VeighNa quant trading framework.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    quant
    quantitative
    investment
    trading
    algotrading
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Simplified)

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    importlib_metadata
